# opendosm-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test_live.py
.github/workflows/: ci.yml  publish.yml
docs/: user-guide.md
examples/: filtering.py  pandas_analysis.py  quickstart.py
src/opendosm/: __init__.py  client.py  exceptions.py  http.py  models.py  query.py
src/opendosm/api/: base.py  data_catalogue.py  opendosm.py
src/opendosm/integrations/: pandas.py
tests/: conftest.py  test_client.py  test_data_catalogue_api.py  test_exceptions.py  test_http.py  test_models.py  test_opendosm_api.py  test_pandas.py  test_query.py
