[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opendosm"
version = "0.1.0"
description = "A Pythonic SDK for Malaysia's OpenDOSM and data.gov.my Open API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">= 3.10"
authors = [
    {name = "Akmal Danial", email = "akmaldanial.work@gmail.com"},
]
keywords = ["opendosm", "dosm", "malaysia", "open-data", "statistics", "api", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-httpx>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pandas>=1.5.0",
    "pandas-stubs>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/aldan-1/opendosm-py"
Documentation = "https://github.com/aldan-1/opendosm-py#readme"
Repository = "https://github.com/aldan-1/opendosm-py"
Issues = "https://github.com/aldan-1/opendosm-py/issues"
Changelog = "https://github.com/aldan-1/opendosm-py/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/opendosm"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
